--- a/src/style/sidebar.less
+++ b/src/style/sidebar.less
@@ -5,10 +5,10 @@
 	color: #CCC;
 	font-size: 13px;
 	text-shadow: 0px 1px 1px black;
-	width: 200px;
+	width: 150px;
 	height: 100%;
 	float: left;
-	
+	overflow: hidden;
 	
 	.section-title {
 		font-size: 14;
