--- a/src/style/mainView.less
+++ b/src/style/mainView.less
@@ -1,7 +1,27 @@
+@import "./style";
+
 #main-view {
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: hidden;
 	height: 100%;
-	padding-left: 3px;
 	background-color: #EEE;
+	display: -webkit-flex;
+	flex-direction: column;
+
+	#output {
+		flex-grow: 1;
+		overflow-x: hidden;
+		overflow-y: auto;
+		padding-left: 5px;
+		font-size: 14px;
+	}
+
+	#input-box {
+		.margin-reset;
+		flex-shrink: 0;
+		height: 25px;
+		border: none;
+		border-top: 1px solid #DDD;
+		padding: 0px 3px 0px 3px;
+	}
 }
